Fix background issues in dark mode

--- a/base/_base.scss
+++ b/base/_base.scss
@@ -305,7 +305,7 @@ img {
     display: inline-block;
     width: 100%;
     vertical-align: middle;
-    border: 1rem solid $color-white;
+    border: 1rem solid rgba(0, 0, 0, 0);
     box-sizing: border-box;
   }
 
